--- a/subsection_Extension_to_Random_Forests__.tex
+++ b/subsection_Extension_to_Random_Forests__.tex
@@ -157,11 +157,8 @@ Also, the correlation between $I(h(\textbf{x}, \Theta) = \textbf{y})$ and \  $I(
 $$ \overline{\rho} =  \Expect_{\Theta,\Theta'} \left[ \rho \left( h(\cdot{},\Theta) ,h(\cdot{},\Theta') \right)   \right] $$
 
 
-\subsubsection{Benefits and Drawbacks of Random Forests}
+One benefit of building Random Forest classifiers is that the algorithm easily increases the prediction error of a group of estimators by randomly building each of these in a way that decreases the variance of the overall model whilst trading a small loss in bias. The model is also robust to the introduction of number of noisy features. If the ratio of informative vs. non-informative features is not extreme , selecting $m$ features at each split at random will mean that in most cases, splits will be made on those informative features. It's important to compare the model's performance across different values for $m$. The depth of growth for each tree is another important tuning parameter. A deep tree will tend to overfit the data by partitioning input space to fit the training data. Therefore controlling the maximum allowed growth for the base learners will be important to improve the performance of the model.
 
-
-
-
-Another useful tool derived from forests is that of measuring variable importance. To do this, we must first select a candidate feature to be analyzed. Then given a node in a tree where data has to be split, we compare the results of the improvement in the split performance, as measured by some pre-selected criteria, with and without the candidate. These results are recorded and averaged across all trees and all of the split scenarios. 
+The measure of variable importance is another useful tool derived from Random Forests. The idea is that at each split we can measure the gain of using a certain variable for the split versus not using it. Given a candidate feature $X_j$ to be analyzed and fore every node in a tree where a split is to be done, we compare the the improvement in the split performance, as measured by some pre-selected criteria, with and without $X_j$. These results are recorded and averaged across all trees and all of the split scenarios to have a score for the feature. The features with the highest scores can be thought as the most informative variables of the model.  
 
 
